<resources>
    <string name="app_name">SekolahQu</string>

    <string name="beranda">Beranda</string>
    <string name="favorit">Favorit</string>
    <string name="cari">Cari</string>
    <string name="sekolah">Sekolah</string>
    <string name="berita">Berita</string>
    <string name="acara">Acara</string>
    <string name="prestasi">Prestasi</string>
    <string name="tentang">Tentang</string>
    <string name="visi_dan_misi">Visi dan Misi</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="ekstrakulikuler">Ekstrakulikuler</string>

    <string-array name="judul">
        <item>Juara Pertama Lomba Matematika Tingkat SMA Tahun 2000 1</item>
        <item>Juara Pertama Lomba Matematika Tingkat SMA Tahun 2000 2</item>
        <item>Juara Pertama Lomba Matematika Tingkat SMA Tahun 2000 3</item>
    </string-array>

    <string-array name="deskripsi">
        <item>SMAN BANDUNG 1</item>
        <item>SMAN BANDUNG 2</item>
        <item>SMAN BANDUNG 3</item>
    </string-array>

    <string-array name="tanggal">
        <item>26 Agustus 2018</item>
        <item>27 Agustus 2018</item>
        <item>28 Agustus 2018</item>
    </string-array>

    <array name="image_news">
        <item>@drawable/ekstrakulikuler</item>
        <item>@drawable/ekstrakulikuler</item>
        <item>@drawable/ekstrakulikuler</item>
    </array>

    <array name="image_acara">
        <item>@drawable/fasilitas</item>
        <item>@drawable/fasilitas</item>
        <item>@drawable/fasilitas</item>
    </array>

    <string-array name="item_array">
        <item>Berita</item>
        <item>Acara</item>
        <item>Prestasi</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_kosong">Tidak Ada Data</string>
    <string name="datakosong">Data Kosong</string>
    <string name="detil_acara">Detail Acara</string>
</resources>
