<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/swipe_sekolah_home">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:clipToPadding="false">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/iv_logo_sekolah"
                    android:src="@drawable/banner_home"/>
            <LinearLayout
                    android:id="@+id/ll_tentang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_logo_sekolah"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_tentang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/tentang"
                        android:layout_marginStart="18dp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                            android:id="@+id/btn_visi_misi"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="70dp"
                            android:layout_marginBottom="4dp"
                            android:background="#f4f4f4"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp"
                            android:elevation="8dp"

                    >

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:layout_marginStart="12dp"
                                    android:layout_marginEnd="12dp"
                                    android:scaleType="centerCrop"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/visi_misi" />

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/visi_dan_misi"
                                    android:textAlignment="center"
                                    android:textColor="@android:color/black"
                                    android:textSize="12sp" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                            android:id="@+id/btn_kalender"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="4dp"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:layout_marginStart="12dp"
                                    android:layout_marginEnd="12dp"
                                    app:srcCompat="@drawable/fasilitas"
                                    android:layout_gravity="center"/>

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Kalender"
                                    android:textAlignment="center"
                                    android:textColor="@android:color/black"
                                    android:textSize="12sp" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>


                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                            android:id="@+id/btn_fasilitas"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="70dp"
                            android:layout_marginBottom="4dp"
                            android:background="#f4f4f4"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp"
                            android:elevation="8dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:layout_marginStart="12dp"
                                    android:layout_marginEnd="12dp"
                                    app:srcCompat="@drawable/fasilitas"
                                    android:layout_gravity="center"/>

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/fasilitas"
                                    android:textAlignment="center"
                                    android:textColor="@android:color/black"
                                    android:textSize="12sp" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                            android:id="@+id/btn_ekskul"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="40dp"
                            android:layout_marginBottom="4dp"
                            app:cardCornerRadius="4dp"
                            app:cardElevation="8dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:layout_marginStart="12dp"
                                    android:layout_marginEnd="12dp"
                                    android:layout_gravity="center"
                                    app:srcCompat="@drawable/ekstrakulikuler" />

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/ekstrakulikuler"
                                    android:textAlignment="center"
                                    android:textColor="@android:color/black"
                                    android:textSize="12sp" />
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_prestasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_tentang"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_prestasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/prestasi" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_prestasi_home"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="6dp"
                            android:layout_marginBottom="?android:actionBarSize">

                    </android.support.v7.widget.RecyclerView>

                    <ImageView android:layout_width="wrap_content"
                               android:layout_height="100dp"
                               android:id="@+id/iv_prestasi_failed"
                               android:layout_marginTop="16dp"
                               android:layout_marginBottom="?android:actionBarSize"/>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>